web-infras/parser/tests/fixtures/babel/core/categorized/invalid-assignment-pattern-7/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,2)
1|(a -= 1) = t
 |^
[SyntaxError]: invalid assignment left-hand side (1,2)
1|(a -= 1) = t
 |^
